Fix: text editable area not covering near bottom of screen

--- a/src/components/editor/Lexical/Editor.scss
+++ b/src/components/editor/Lexical/Editor.scss
@@ -27,7 +27,7 @@
 	}
 
 	&editor-input {
-		min-height: calc(100vh - 16.5rem);
+		min-height: calc(100vh - 9.5rem);
 		// min-height: 10rem;
 		resize: none;
 		font-size: 1rem;
